Remove availability cache feature and clean up related dependencies, services, and models